--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -68,7 +68,8 @@ display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-left: 25px;
+margin-top: 500px;
+margin-left: 18px;
 position:relative;
 image-rendering: pixelated;
 vertical-align: bottom;
