--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -27,6 +27,8 @@ margin: auto;
 position:relative;
 image-rendering: pixelated;
 vertical-align: bottom;
+width: 400px;
+height: 156px;
 }   
 
 @keyframes throb {
