--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -39,7 +39,7 @@ height: 120px;
 
 
 #modular{
-  border: 1px solid transparent; border-image: url("/data/images/random/ants2.gif") 1 repeat;
+  border: 1px solid transparent; border-image: url("/data/images/random/ants2.png") 1 repeat;
   animation: hoverhand 3s ease-in-out infinite;
 float: left;
 display: block;
@@ -103,7 +103,7 @@ margin-bottom: -22px;
 .containempy{
 position: relative;
 background-image: url("/data/images/backgrounds/polkabg.gif");
-border: 1px solid transparent; border-image: url("/data/images/random/ants2.gif") 1 repeat;
+border: 1px solid transparent; border-image: url("/data/images/random/ants2.png") 1 repeat;
 width: 900px;
 height: 100vh;
 align-items: center;
