--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://i.pinimg.com/originals/4c/72/18/4c72180adee695e0ce30855df5bc12f5.gif");
+  background-image: url("/data/images/backgrounds/STARRAINBOWBG.jpg");
   background-size: cover;
 }
 
