--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -2,6 +2,11 @@ body {
   background-image: url("/data/images/backgrounds/STARRAINBOWBG.jpg");
 }
 
+html,body{
+height:100%;
+ min-height:100%; 
+}
+
 .sidenav a:hover {color:#fff; background-color:#282828;}
 .sidenav a:active {color:#3664b6;}
 .sidenav>hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
