--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -77,6 +77,9 @@ vertical-align: bottom;
 width: 150px;
 height: 150px;
 border: #fff 2px solid;
+border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
 }   
 
 .empytext1{
