--- a/css.css
+++ b/css.css
@@ -140,6 +140,7 @@ font-family: 'vgados', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans', Arial, sa
   margin-left: 160px; /* Same as the width of the sidebar */
   padding: 0px 0px;
   overflow:auto;
+  margin-top: 0;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
