add some lorreeeeeee

--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -119,6 +119,12 @@ font-size: 150px;
 color: #fff;
 }   
 
+.empytext3{
+font-family: "fp";
+font-size: 18px;
+color: #fff;
+}   
+
 #empytext{
 text-align: center;
 justify-content: center;
