--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -120,7 +120,7 @@ color: #fff;
 }   
 
 .empytext3{
-font-family: "fp";
+font-family: "din";
 font-size: 18px;
 color: #fff;
 }   
@@ -151,6 +151,11 @@ align-self: center;
 text-align: center;
 margin: auto;
 top: 0%;
+}
+
+@font-face {
+  font-family: "din";
+  src: url("/data/font/dinc.ttf");
 }
 
 
