--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -106,6 +106,25 @@ width: 180px;
 height: 180px;
 }   
 
+#empy3img{
+animation: hoverhand 3s ease-in-out infinite;
+float: right;
+display: block;
+align-items: right;
+align-self: right;
+justify-content: right;
+margin-top: 1000px;
+margin-right: 200px;
+position:absolute;
+image-rendering: pixelated;
+vertical-align: bottom;
+width: 150px;
+height: 150px;
+border: #fff 3px solid;
+border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+}   
 
 .empytext1{
 font-family: "dd";
