--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -113,13 +113,11 @@ display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-top: 800px;
+margin-top: 8S00px;
 margin-left: 50px;
 position:absolute;
 image-rendering: pixelated;
 vertical-align: bottom;
-width: 150px;
-height: 150px;
 
 }   
 
