--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -113,7 +113,7 @@ display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-top: 8S90px;
+margin-top: 8600px;
 margin-left: 0px;
 position:absolute;
 image-rendering: pixelated;
