--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -158,7 +158,7 @@ background-image: url("/data/images/backgrounds/polkabg.gif");
 width: 900px;
 height: 100vh;
 align-items: center;
-display: flex;
+display: block;
 justify-content: center;
 text-align: center;
 float: top;
