--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -45,8 +45,8 @@ display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-top: 250px;
-margin-left: 0px;
+margin-top: 220px;
+margin-right: 200px;
 position:relative;
 image-rendering: pixelated;
 vertical-align: bottom;
