add Empy3 character CSS file

--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -46,7 +46,7 @@ align-items: left;
 align-self: left;
 justify-content: left;
 margin-top: 220px;
-margin-right: 200px;
+margin-left: 200px;
 position:relative;
 image-rendering: pixelated;
 vertical-align: bottom;
