--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -135,23 +135,69 @@ border-radius:50%;
 	100% {transform: rotate(6deg);}
 	}
 
-#PLURFX{
-animation-name: wag;
-  animation-duration: 1.8s;
+#gradientplur{
+   animation-name: throb;
+  animation-duration: .8s;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;  
+float: left;
+align-items: left;
+align-self: left;
+justify-content: left;
+margin-top: 80px;
+margin-left: -195px;
+position:absolute;
+image-rendering: pixelated;
+vertical-align: bottom;
+width: 500px;
+height: 350px;
+}   
+
+#gradientcapt{
+   animation-name: throb;
+  animation-duration: .8s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;  
+float: left;
+align-items: left;
+align-self: left;
+justify-content: left;
+margin-top: 330px;
+margin-left: 40px;
+position:absolute;
+image-rendering: pixelated;
+vertical-align: bottom;
+width: 400px;
+height: 300px;
+}   
+
+#PLURFX{
 float: left;
 display: block;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-top: 125px;
+margin-top: 100px;
 margin-left: 330px;
 position:absolute;
 image-rendering: pixelated;
 vertical-align: bottom;
 width: 400px;
 height: 300px;
+}   
+
+#CAPTCHALOGO{
+float: left;
+display: block;
+align-items: left;
+align-self: left;
+justify-content: left;
+margin-top: 370px;
+margin-left: 470px;
+position:absolute;
+vertical-align: bottom;
+width: 450px;
+height: 200px;
 }   
 
 #empy3img{
