--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -144,8 +144,8 @@ float: left;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-top: 80px;
-margin-left: -195px;
+margin-top: 60px;
+margin-left: -145px;
 position:absolute;
 image-rendering: pixelated;
 vertical-align: bottom;
@@ -162,8 +162,8 @@ float: left;
 align-items: left;
 align-self: left;
 justify-content: left;
-margin-top: 330px;
-margin-left: 40px;
+margin-top: 320px;
+margin-left: 50px;
 position:absolute;
 image-rendering: pixelated;
 vertical-align: bottom;
@@ -195,10 +195,49 @@ justify-content: left;
 margin-top: 370px;
 margin-left: 470px;
 position:absolute;
+image-rendering: crisp-edges;
 vertical-align: bottom;
 width: 450px;
 height: 200px;
 }   
+
+.hov{
+transition: .3s cubic-bezier(0,1,1,1);
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: cubic-bezier(0, 1, 1, 1);
+    transition-delay: 0s;
+    transition-behavior: normal;
+  filter: drop-shadow(0px 0px 0px #000000);
+  position: absolute;
+  background-size: 100% 100%;
+  z-index: 6;
+}
+
+.hsl:hover{
+filter:drop-shadow(0px 16px 0px #3a3a3a);
+}
+
+.hov img
+{
+transition:1s cubic-bezier(0,0.8,0.3,.8);
+filter:opacity(0.0) hue-rotate(900deg);
+transform:scale(1.08);
+mix-blend-mode:difference;
+pointer-events:none;
+overflow:hidden;
+image-rendering:pixelated;}
+
+.hov:hover img
+{
+transition:0s;
+filter:opacity(1) hue-rotate(0deg);
+transform:scale(1);
+}
+
+.hov:hover{
+transform:translate(0px,-8px);
+transition:.3s cubic-bezier(0.1,2,0.5,2)}
 
 #empy3img{
 float: left;
