--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -215,7 +215,7 @@ transition: .3s cubic-bezier(0,1,1,1);
 }
 
 .hsl:hover{
-filter:drop-shadow(0px 16px 0px #3a3a3a);
+filter:drop-shadow(0px 16px 0px #252525);
 }
 
 .hov img
@@ -236,6 +236,45 @@ transform:scale(1);
 }
 
 .hov:hover{
+transform:translate(0px,-8px);
+transition:.3s cubic-bezier(0.1,2,0.5,2)}
+
+
+.hov1{
+transition: .3s cubic-bezier(0,1,1,1);
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: cubic-bezier(0, 1, 1, 1);
+    transition-delay: 0s;
+    transition-behavior: normal;
+  filter: drop-shadow(0px 0px 0px #000000);
+  position: absolute;
+  background-size: 100% 100%;
+  z-index: 6;
+}
+
+.hsl1:hover{
+filter:drop-shadow(0px 16px 0px #c5c5c5);
+}
+
+.hov1 img
+{
+transition:1s cubic-bezier(0,0.8,0.3,.8);
+filter:opacity(0.0) hue-rotate(900deg);
+transform:scale(1.08);
+mix-blend-mode:difference;
+pointer-events:none;
+overflow:hidden;
+image-rendering:pixelated;}
+
+.hov1:hover img
+{
+transition:0s;
+filter:opacity(1) hue-rotate(0deg);
+transform:scale(1);
+}
+
+.hov1:hover{
 transform:translate(0px,-8px);
 transition:.3s cubic-bezier(0.1,2,0.5,2)}
 
