--- a/characters/empy3.css
+++ b/characters/empy3.css
@@ -254,7 +254,7 @@ transition: .3s cubic-bezier(0,1,1,1);
 }
 
 .hsl1:hover{
-filter:drop-shadow(0px 16px 0px #c5c5c5);
+filter:drop-shadow(0px 16px 0px #9c9c9c);
 }
 
 .hov1 img
