--- a/characters/ciro.css
+++ b/characters/ciro.css
@@ -1,11 +1,11 @@
  body{
        cursor: crosshair;
-      background-image: url("/data/images/backgrounds/dither_it_Kairobackground1.png");
+      background-image: url("/data/images/backgrounds/dither_it_cirobackground1.png");
      background-size: cover;
     
       
     }
-#kairoimg1{
+#ciroimg1{
  image-rendering: pixelated;
   left:1%;
   position:relative;
