--- a/characters/ciro.css
+++ b/characters/ciro.css
@@ -88,43 +88,59 @@ left: -300px;
   font-family: "din";
   src: url("/data/font/dinc.ttf");
 }
-#containurself{
- position:relative;
-float:center;
- align-items:center;
-  display:inline-block;
-    gap: 15px;
-text-align:center;
- left:10%;
+
+#CAPTCHALOGO{
+float: left;
+display: block;
+align-items: left;
+align-self: left;
+justify-content: left;
+top: 10px;
+right: 690px;
+position:absolute;
+image-rendering: crisp-edges;
+width: 450px;
+height: 200px;
+}   
+
+.hov1{
+transition: .3s cubic-bezier(0,1,1,1);
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: cubic-bezier(0, 1, 1, 1);
+    transition-delay: 0s;
+    transition-behavior: normal;
+  filter: drop-shadow(0px 0px 0px #000000);
+  position: absolute;
+  background-size: 100% 100%;
+  z-index: 6;
 }
 
-
-#box{
- position:relative;
- font-family: "bv";
- font-size:110px;
- text-align:center;
- color: white;
-   font-weight: 900;
+.hsl1:hover{
+filter:drop-shadow(0px 16px 0px #9c9c9c);
 }
 
-#box1{
-  position:relative;
- font-family: "bv";
- font-size:50px;
- text-align:center;
- color: white;
-   font-weight: 700;
+.hov1 img
+{
+transition:1s cubic-bezier(0,0.8,0.3,.8);
+filter:opacity(0.0) hue-rotate(900deg);
+transform:scale(1.08);
+mix-blend-mode:difference;
+pointer-events:none;
+overflow:hidden;
+image-rendering:pixelated;}
+
+.hov1:hover img
+{
+transition:0s;
+filter:opacity(1) hue-rotate(0deg);
+transform:scale(1);
 }
 
-#box2{
-  position:relative;
- font-family: "din";
- font-size:20px;
- text-align:center;
- color: white;
-   font-weight: 600;
-}
+.hov1:hover{
+transform:translate(0px,-8px);
+transition:.3s cubic-bezier(0.1,2,0.5,2)}
+
 
 
 .sidenav a:hover {color:#fff; background-color:#282828;}
