--- a/characters/ciro.css
+++ b/characters/ciro.css
@@ -80,7 +80,7 @@ left: -300px;
 
 @font-face {
   font-family: "haxx";
-  src: url("/data/font/haxx.ttf");
+  src: url("/data/font/MonaspaceKryptonFrozen-Regular.ttf");
 }
 
 @font-face {
