--- a/characters/lala.css
+++ b/characters/lala.css
@@ -1,6 +1,9 @@
-body {
-  background-image: url("/data/images/backgrounds/polkabg.gif");
+html {
+  background-repeat: no-repeat, repeat;
+background-size: cover, auto;
+  background-image: url("/data/images/random/undercons.png"),url("/data/images/backgrounds/polkabg.gif");
 }
+
 
 .sidenav a:hover {color:#fff; background-color:#282828;}
 .sidenav a:active {color:#3664b6;}
@@ -8,11 +11,30 @@ body {
 a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
 a:link {color:#3664b6;}
 a:visited {color:#3664b6;}
-a:hover {color:#181818;	border: 1px solid transparent; border-image: url("data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
+a:hover {color:#181818;	border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
 a:active {color:#fff;}
 
+     #txt{
+
+      font-family: dd;
+      color: #fff;
+      font-size: 100px;
+      text-align: center;
+      float:center;
+      align-content: center;
+      align-self: center;
+      justify-content: flex;
+      align-items: center;
+      margin-top: 200px;
+      padding-bottom: 20px;
+      background-color: #282828;
+      border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat;
+
+     }
      
-     
-     
+ @font-face {
+  font-family: dd;
+  src: url(/data/font/DigitalDisorder.ttf);
+ }    
      
     
