--- a/characters/ciro.css
+++ b/characters/ciro.css
@@ -100,7 +100,6 @@ height: 500px;
 display: block;
 }
 
-
 #CAPTCHALOGO{
 float: left;
 display: block;
@@ -113,6 +112,7 @@ position:absolute;
 image-rendering: crisp-edges;
 width: 450px;
 height: 200px;
+z-index: 0;
 }   
 
 .hov1{
