--- a/characters/ciro.css
+++ b/characters/ciro.css
@@ -155,6 +155,48 @@ transition:.3s cubic-bezier(0.1,2,0.5,2)}
 
 
 
+.container{
+  padding : 20px;
+  margin : 50px auto;
+  display : grid;
+  width : 70%;
+}
+.splash{
+  cursor : crosshair;
+  position : fixed;
+  top : 50%;
+  left : 50%;
+  height : 100%;
+  width : 100%;
+  transform : translate(-50%,-50%);    
+  background-color: rgba(0,0,0);
+  transition : all ease-in-out 600ms;
+}
+.hidden{
+  transition : 0.5s;
+  display : none;
+}
+#splash-header {
+  height : 90%;
+  color : white;
+  font-family : consolas;
+  font-size : 30px;
+  display : flex;
+  justify-content: center;
+  align-items : center;
+}
+
+.btn {
+/*   border : none; */
+/*   padding : 10px; */
+/*   position : fixed; */
+  z-index : -1;
+  left : 50%;
+  transform : translateX(-50%);
+}
+
+
+
 .sidenav a:hover {color:#fff; background-color:#282828;}
 .sidenav a:active {color:#3664b6;}
 .sidenav>hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
